April 6th 2025 Martin Fuentes Fernandez Changes until April 6th

--- a/includes/.env
+++ b/includes/.env
@@ -1,14 +1,14 @@
-DB_HOST=localhost
-DB_USER=root
-DB_PASS=root
-DB_NAME=funeralesfuentes
+DB_HOST = localhost
+DB_USER = root
+DB_PASS = root
+DB_NAME = funeralesfuentes
 
-EMAIL_HOST=sandbox.smtp.mailtrap.io
-EMAIL_PORT=2525
-EMAIL_USER=272e7759cf3e63
-EMAIL_PASS=94929885051164
+EMAIL_HOST = sandbox.smtp.mailtrap.io
+EMAIL_PORT = 2525
+EMAIL_USER = 272e7759cf3e63
+EMAIL_PASS = 94929885051164
 
-ITEMS_PER_PAGE=10
-PASSWORD_LENGTH=8
+ITEMS_PER_PAGE = 10
+PASSWORD_LENGTH = 8
 
-HOST=http://localhost:3000
+HOST = http://localhost:3000
