adjusted index.html

--- a/includes/.env
+++ b/includes/.env
@@ -1,14 +1,35 @@
-DB_HOST = localhost
-DB_USER = root
-DB_PASS = root
-DB_NAME = funeralesfuentes
+# For local server - comment for internet server
+DB_HOST=localhost
+DB_USER=root
+DB_PASS=root
+DB_NAME=funeralesfuentes
 
-EMAIL_HOST = sandbox.smtp.mailtrap.io
-EMAIL_PORT = 2525
-EMAIL_USER = 272e7759cf3e63
-EMAIL_PASS = 94929885051164
+EMAIL_HOST=sandbox.smtp.mailtrap.io
+EMAIL_PORT=2525
+EMAIL_USER=272e7759cf3e63
+EMAIL_PASS=94929885051164
 
-ITEMS_PER_PAGE = 10
-PASSWORD_LENGTH = 8
+ITEMS_PER_PAGE=10
+PASSWORD_LENGTH=8
 
-HOST = http://localhost:3000
+HOST=http://localhost:3000
+
+
+# For internet server - comment for local server
+# DB_HOST=localhost
+# DB_PORT=3306
+# DB_NAME=funejxhk_funeralesfuentes
+# DB_USER=funejxhk_root
+# DB_PASS=MFF1994ily!
+
+# EMAIL_HOST=funeralesfuentes.com
+# EMAIL_PORT=465
+# EMAIL_USER_CONTACT=contacto@funeralesfuentes.com
+# EMAIL_USER_MARKETING=marketing@funeralesfuentes.com
+# EMAIL_USER_NOREPLY=no-reply@funeralesfuentes.com
+# EMAIL_PASS=MFFaoibNDPLGTA4Ejan27198!
+
+# ITEMS_PER_PAGE=10
+# PASSWORD_LENGTH=8
+
+# HOST=https://funeralesfuentes.com
