--- a/includes/.env
+++ b/includes/.env
@@ -1,3 +1,6 @@
+CAP_KEY=6Le3OhYrAAAAAFJOB25T1OEjmz9UklHbRBv26asP
+CAP_SEC=6Le3OhYrAAAAALRf4U1lMILizgaIzZ_06C2yNX96
+
 # For local server - comment for internet server
 DB_HOST=localhost
 DB_USER=root
