ajuste de codigo

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "funeralesfuentes-php-mvc-mysql",
   "version": "1.0.0",
-  "description": "Proyecto Final Desarrollo Web Completo con @codigoconjuan",
+  "description": "Proyecto Final Funerales Fuentes",
   "main": "index.js",
   "scripts": {
     "dev": "gulp dev",
