--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
     "require": {
         "phpmailer/phpmailer": "^6.9",
         "vlucas/phpdotenv": "^5.6",
-        "intervention/image": "^3.11"
+        "intervention/image": "^3.11",
+        "google/apiclient": "2.0"
     }
 }
