--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,7 @@
         "phpmailer/phpmailer": "^6.9",
         "vlucas/phpdotenv": "^5.6",
         "intervention/image": "^3.11",
-        "google/apiclient": "2.0"
+        "google/apiclient": "2.0",
+        "league/oauth2-google": "^4.0"
     }
 }
